lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:5: error: not found: value y
	 	if (y(getSol(i))==y(getSol(i+1)(1))) {
                    ^Lander:6: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
	 		debut=getSol(i)
                                    ^Lander:7: error: too many arguments for method getSol: ()java.util.List[lessons.lander.universe.Point]
	 		fin=getSol(i+1)
                                  ^